Se agrego boton y mensaje en scrip.js

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Prueba</h1>
+    <h1>Pruebas Ramas</h1>
+
+    <button onclick="saludo()">Mensaje</button>
+
+     <script src="./assets/js/script.js"></script>
 </body>
 </html>
